--- a/service-matrix.properties
+++ b/service-matrix.properties
@@ -2,7 +2,7 @@ id.walt.services.essif.didebsi.DidEbsiService=id.walt.services.essif.didebsi.Wal
 id.walt.services.vc.JsonLdCredentialService=id.walt.services.vc.WaltIdJsonLdCredentialService
 id.walt.services.vc.JwtCredentialService=id.walt.services.vc.WaltIdJwtCredentialService
 id.walt.services.crypto.CryptoService=id.walt.services.crypto.SunCryptoService
-id.walt.services.keystore.KeyStoreService=id.walt.services.keystore.FileSystemKeyStoreService
+id.walt.services.keystore.KeyStoreService=confidentialstorage.ssikitext.EncryptedKeyStore:crypto.conf
 id.walt.services.key.KeyService=id.walt.services.key.WaltIdKeyService
 id.walt.services.jwt.JwtService=id.walt.services.jwt.WaltIdJwtService
 id.walt.services.vcstore.VcStoreService=id.walt.services.vcstore.FileSystemVcStoreService
